Removed some further checkstyle issues.